Alignment issues for left nav list items fixed

--- a/src/app/core/common/leftNav/leftNav.component.scss
+++ b/src/app/core/common/leftNav/leftNav.component.scss
@@ -104,3 +104,7 @@
     color: #029FB9;
     font-size: xx-large;
 }
+
+.top-padding{
+    padding-top: 4px;
+}
